第47轮扩写：36篇薄弱文档批量深化（ES/ClickHouse/分布式系统/Doris/Envoy/RocketMQ/Seata/Sentinel/Zabbix/Trino/Kong/Loki/GitHub Actions/EMQX/MQ/Web安全/gRPC/注册中心/Jenkins等）